[gd_scene load_steps=4 format=3 uid="uid://bf2wnxwm482ir"]

[ext_resource type="PackedScene" uid="uid://dc4vyffm4fyvi" path="res://scenes/map_editor/story/triggers/types/base_edit_type.tscn" id="1_2jcdp"]
[ext_resource type="Script" path="res://scenes/map_editor/story/triggers/types/deploy.gd" id="2_raldu"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_wrw1b"]

[node name="Deploy" instance=ExtResource("1_2jcdp")]
script = ExtResource("2_raldu")

[node name="player_id" type="Label" parent="." index="8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wrw1b")
text = "TR_PLAYER_ID"
vertical_alignment = 1

[node name="id" type="LineEdit" parent="player_id" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1
max_length = 1

[node name="player_side" type="Label" parent="." index="9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wrw1b")
text = "TR_PLAYER_SIDE"
vertical_alignment = 1

[node name="side" type="LineEdit" parent="player_side" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="unit_type" type="Label" parent="." index="10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 350.0
offset_right = -250.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wrw1b")
text = "TR_UNIT_TYPE"
vertical_alignment = 1

[node name="unit_type_input" type="LineEdit" parent="unit_type" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="amount" type="Label" parent="." index="11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_right = -250.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wrw1b")
text = "TR_AMOUNT"
vertical_alignment = 1

[node name="amount" type="LineEdit" parent="amount" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
text = "1"
alignment = 1

[connection signal="text_changed" from="player_id/id" to="." method="_on_text_changed"]
[connection signal="text_changed" from="player_side/side" to="." method="_on_text_changed"]
[connection signal="text_changed" from="unit_type/unit_type_input" to="." method="_on_text_changed"]
[connection signal="text_changed" from="amount/amount" to="." method="_on_text_changed"]
